--- a/Style/style.css
+++ b/Style/style.css
@@ -37,17 +37,6 @@ nav {
     fill: #f0f0f0;
 }
 
-
-
-.navbar-brand h1{ 
-    font-family: 'Poppins', sans-serif;
-    color: #f0f0f0;
-    font-size: 1.3rem;
-    font-weight: 500;
-    margin: 0;
-    text-transform: uppercase;
-}
-
 /*LINKS*/
 .nav-link { 
     padding: 0;
@@ -70,29 +59,13 @@ nav {
     padding: 0;
 }
 
-/* --------------------------------------HERO-------------------------------------- */
-.hero {
-    height: 85vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-.logo {
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 /* --------------------------------------Titre Section-------------------------------------- */
 .sectionTitle {
     width: 33%;
-    background-color: #f0f0f0;
-    /* background-image: linear-gradient(rgb(20, 20, 20), rgb(61, 61, 61)); */
     color: rgb(37, 37, 37);
-    padding: 10px;
-    /* border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;  */
+    font-size: 3rem;
+    font-family: 'Poppins', sans-serif;
 }
 
 /* --------------------------------------Projets-------------------------------------- */
@@ -123,6 +96,17 @@ nav {
 
 .projetText h3{
     margin-bottom: 10px;
+    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;
+}
+
+.projetText h4 {
+    font-size: 1.6rem;
+    font-family: 'Poppins', sans-serif;
+}
+
+.projetText p {
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .topRight i{
@@ -154,6 +138,7 @@ ul {
 
 li {
     list-style-type: none;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 /* --------------------------------------Curriculum-------------------------------------- */
@@ -165,6 +150,7 @@ li {
 .titleCv h2{
     margin: 20px 0;
     color: black;
+    font-family: 'Poppins', sans-serif;
 }
 
 #presentation {
@@ -179,12 +165,18 @@ li {
     border-radius: 15px;
 }
 
+.education p {
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
 .lieuCv, .positionCv {
     color: rgb(112, 112, 112);
     margin-bottom: 5px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .anneeCv {
+    width: auto; /*pour Edge */
     width: fit-content;
     background-color: grey;
     color: whitesmoke;
@@ -219,10 +211,12 @@ footer {
 .nomFooter h1{
     font-size: 1.3rem;
     color: #f0f0f0;
+    font-family: 'Poppins', sans-serif;
 }
 
 #email, #tel {
     color: #f0f0f0;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 .iconsFooter {
     width: 100;
@@ -240,6 +234,7 @@ footer .fa-linkedin, .fa-github:hover { /*Pour régler le problème du hover non
 .copyFooter p{
     color: #f0f0f0;
     margin-bottom: 5px;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 svg {
@@ -267,36 +262,22 @@ svg {
         padding: 10px 7px;
         margin-bottom: 7%;    
     }
-
-    .titleHead h1 {
-        font-size: 5rem;
-    }
-    
-    .titleHead P {
-        font-size: 1.2rem;
-    }
-
 }
 
 @media screen and (max-width: 992px) {
     header {
         height: 100vh;
     }
-    .titleHead {
-        margin-top: 25px;
-        text-align: center;
-        align-items: center;
-    }
 
-    .titleHead h1 {
-        font-size: 4rem;
-    }
-
-    .titleHead P {
-        font-size: 1rem;
-    }
     #logoHead {
         height: 33vh;
+    }
+
+    .projetText h3{
+        font-size: 1.8rem;
+    }
+    .projetText h4 {
+        font-size: 1.4rem;
     }
 }
 
@@ -311,21 +292,16 @@ svg {
     .projet { 
         padding: 5% 4%;
     }
+    .curriculum {
+        padding: 5% 4%
+    }
 
     #logoHead {
         height: 30vh;
     }
 
-    .titleHead h1 {
-        font-size: 3.5rem;
-    }
-
-    .titleHead p {
-        font-size: 1rem;
-    }
     .sectionTitle {
         width: fit-content;
-        font-size: 2rem;
     }
 }
 
@@ -336,15 +312,15 @@ svg {
     #logoHead {
         height: 25vh;
     }
+
+    .projetText h3{
+        font-size: 1.5rem;
+    }
+
+    .projetText h4 {
+        font-size: 1.3rem;
+    }
     
-    .titleHead h1 {
-        font-size: 2.5rem;
-    }
-
-    .titleHead p {
-        font-size: 0.8rem;
-    }
-
     footer{
         height: 45vh;
     }
@@ -362,10 +338,7 @@ svg {
         height: 18vh;
     }
 
-    .titleHead h1 {
-        font-size: 2.1rem;
-    }
     .sectionTitle {
-        font-size: 1.6rem;
+        font-size: 2rem;
     }
 }
